<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal">
    <com.example.utils.TitleLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </com.example.utils.TitleLayout>
    <RelativeLayout
        android:id="@+id/myessayd_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/x8"
        >


        <LinearLayout
            android:id="@+id/myessayd_l_detail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/x150"
            android:orientation="vertical"

            android:background="@color/white">

            <TextView
                android:id="@+id/myessayd_title"
                android:layout_width="match_parent"
                android:layout_height="@dimen/x20"
                android:background="@drawable/layout_border"
                android:gravity="center"
                android:text="ddd"/>

            <TextView
                android:id="@+id/myessayd_content"
                android:layout_width="match_parent"
                android:layout_height="@dimen/x100"
                android:layout_marginTop="@dimen/x5"
                android:background="@drawable/layout_border"
                android:ellipsize="none"
                android:inputType="textMultiLine"
                android:singleLine="false"
                android:text="ddd"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/x20"
                android:orientation="horizontal"
                android:background="@drawable/layout_border">
                <TextView
                    android:id="@+id/myessayd_anthor"
                    android:textSize="8sp"
                    android:layout_width="@dimen/x90"
                    android:layout_height="@dimen/x15"
                    android:gravity="center"
                    android:text="author"/>
                <TextView
                    android:id="@+id/myessayd_date"
                    android:textSize="8sp"
                    android:layout_width="@dimen/x100"
                    android:layout_height="@dimen/x15"
                    android:gravity="center"
                    android:text="time"/>
                <TextView
                    android:id="@+id/myessayd_commentCount"
                    android:textSize="8sp"
                    android:layout_width="@dimen/x60"
                    android:layout_height="@dimen/x15"
                    android:gravity="center"
                    android:text="评论"/>
                <ImageView
                    android:layout_width="@dimen/x15"
                    android:layout_height="@dimen/x15"
                    android:background="@mipmap/like">

                </ImageView>
                <TextView
                    android:id="@+id/myessayd_collectCount"
                    android:textSize="8sp"
                    android:layout_width="@dimen/x60"
                    android:layout_height="@dimen/x15"
                    android:layout_marginLeft="@dimen/x5"
                    android:gravity="center_vertical"
                    android:text="收藏"/>
            </LinearLayout>
        </LinearLayout>

        <ListView
            android:id="@+id/myessayd_comment_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/myessayd_l_detail"
            android:layout_marginBottom="@dimen/x50"
            android:layout_weight="1">
        </ListView>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true">
            <com.getbase.floatingactionbutton.FloatingActionsMenu
                android:id="@+id/myessayd_fab_menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_marginBottom="@dimen/x50"
                fab:fab_addButtonColorNormal="@color/fab"
                fab:fab_icon="@drawable/ic_add_black_24dp"
                fab:fab_labelStyle="@style/menu_labels_style"
                fab:fab_labelsPosition="left">

                <com.getbase.floatingactionbutton.FloatingActionButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/myessayd_fab_1"
                    fab:fab_colorNormal="@color/fab"
                    fab:fab_size="mini"
                    fab:fab_icon="@drawable/ic_top_black_24dp"
                    fab:fab_title="置顶"/>

            </com.getbase.floatingactionbutton.FloatingActionsMenu>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/myessayd_enroll"
            android:layout_width="match_parent"
            android:layout_height="@dimen/x50"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true"
            android:background="@color/white">

            <ImageView
                android:id="@+id/myessayd_comment"
                android:layout_width="@dimen/x32"
                android:layout_height="@dimen/x32"
                android:src="@drawable/comment"
                android:layout_weight="1"
                android:layout_gravity="center" />

            <ImageView
                android:id="@+id/myessayd_chat"
                android:layout_width="@dimen/x23"
                android:layout_height="@dimen/x23"
                android:src="@drawable/chat"
                android:layout_weight="1"
                android:layout_gravity="center"/>
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/myessayd_rl_comment"
            android:layout_width="match_parent"
            android:layout_height="@dimen/x40"
            android:background="@color/white"
            android:visibility="gone"
            android:layout_alignParentBottom="true">

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/x1"
                android:background="@color/grey" />

            <TextView
                android:id="@+id/myessayd_hide_down"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hide_down"
                android:textSize="13sp"
                android:textColor="@color/txtgrey"
                android:drawableBottom="@mipmap/hide_dowm"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/x10"/>
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/grey"
                android:layout_toRightOf="@id/myessayd_hide_down"
                android:layout_marginLeft="@dimen/x10"/>
            <EditText
                android:id="@+id/myessayd_comment_content"
                android:hint="@string/comment_content"
                android:textSize="15sp"
                android:singleLine="true"
                android:layout_width="@dimen/x240"
                android:layout_height="@dimen/x35"
                android:background="@null"
                android:layout_toRightOf="@id/myessayd_hide_down"
                android:layout_marginLeft="@dimen/x20"/>

            <Button
                android:id="@+id/myessayd_comment_send"
                android:layout_width="@dimen/x50"
                android:layout_height="@dimen/x35"
                android:layout_margin="@dimen/x5"
                android:text="@string/send"
                android:textSize="13sp"
                android:textColor="@color/white"
                android:background="@color/mainColor"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/x10"
                android:layout_marginLeft="@dimen/x15"/>
        </RelativeLayout>
    </RelativeLayout>
</LinearLayout>
